--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "13.1.0",
     "@ng-bootstrap/ng-bootstrap": "11.0.0",
     "bootstrap": "4.6.0",
+    "feather-icons": "4.28.0",
+    "highcharts": "9.3.3",
     "rxjs": "7.4.0",
     "tslib": "2.3.0",
     "zone.js": "0.11.4"
@@ -29,8 +31,10 @@
     "@angular-devkit/build-angular": "13.1.1",
     "@angular/cli": "13.1.1",
     "@angular/compiler-cli": "13.1.0",
+    "@types/feather-icons": "4.7.0",
     "@types/jasmine": "3.10.0",
     "@types/node": "12.11.1",
+    "angular-cli-ghpages": "^1.0.0",
     "jasmine-core": "3.10.0",
     "karma": "6.3.0",
     "karma-chrome-launcher": "3.1.0",
