--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "13.1.0",
     "@angular/platform-browser-dynamic": "13.1.0",
     "@angular/router": "13.1.0",
+    "@metamask/detect-provider": "^1.2.0",
     "@ng-bootstrap/ng-bootstrap": "11.0.0",
     "bootstrap": "4.6.0",
     "feather-icons": "4.28.0",
