--- a/package.json
+++ b/package.json
@@ -20,14 +20,18 @@
     "@angular/platform-browser-dynamic": "13.1.0",
     "@angular/router": "13.1.0",
     "@metamask/detect-provider": "^1.2.0",
+    "@metamask/providers": "^8.1.1",
     "@ng-bootstrap/ng-bootstrap": "11.0.0",
     "@walletconnect/client": "^1.7.7",
     "@walletconnect/qrcode-modal": "^1.7.7",
     "bootstrap": "4.6.0",
     "feather-icons": "4.28.0",
     "highcharts": "9.3.3",
+    "lottie-web": "^5.9.4",
+    "ngx-lottie": "^8.2.0",
     "rxjs": "7.4.0",
     "tslib": "2.3.0",
+    "web3": "^1.7.3",
     "zone.js": "0.11.4"
   },
   "devDependencies": {
@@ -38,12 +42,18 @@
     "@types/jasmine": "3.10.0",
     "@types/node": "12.11.1",
     "angular-cli-ghpages": "^1.0.0",
+    "assert": "^2.0.0",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
     "jasmine-core": "3.10.0",
     "karma": "6.3.0",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage": "2.1.0",
     "karma-jasmine": "4.0.0",
     "karma-jasmine-html-reporter": "1.7.0",
+    "os-browserify": "^0.3.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "typescript": "4.5.2"
   }
 }
